[package]
name = "since_when"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.9"
chrono = "0.4"
num-traits = "0.2.15"
env_logger = "0.10.0"
log = "0.4.14"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]

[[bin]]
name = "since_when"
path = "src/main.rs"

[lib]
name = "since_when_lib"
path = "src/lib.rs"