[package]
name = "since_when"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
num-traits = "0.2.15"
env_logger = "0.11.0"
log = "0.4.14"

[dependencies.iced]
version = "0.12.0"
features = ["wgpu"]

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]

[[bin]]
name = "since_when"
path = "src/main.rs"

[lib]
name = "since_when_lib"
path = "src/lib.rs"